[project]
name = "data-pro-marimo"
version = "0.1.0"
description = "Data analysis environment with Marimo"
requires-python = ">=3.13"
dependencies = [
    "marimo>=0.9.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "plotly>=5.17.0",
    "psycopg2-binary>=2.9.0",
    "redis>=5.0.0",
    "sqlalchemy>=2.0.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "openpyxl>=3.1.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.29.0",
    "polars>=0.20.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build" 